syntax = "proto3";

option java_package = "com.boswelja.smartwatchextensions";
option java_multiple_files = true;

message PhoneState {
  string id = 1;
  string name = 2;

  bool chargeNotiSent = 4;
  bool lowNotiSent = 5;
}
